spade-tests/src/snapshots/spade_tests__parser__multiple_initial_does_not_pass_compiler.snap
---
source: spade-tests/src/parser.rs
---
entity main() -> bool {
    reg(clk) a reset(true: 0) initial(true) initial(true) = true;
    true
}

error: Unexpected `initial`, expected `=`
  ┌─ testinput:2:45
  │
2 │     reg(clk) a reset(true: 0) initial(true) initial(true) = true;
  │                                             ^^^^^^^ expected `=`

error: Output type mismatch. Expected bool, got ()
  ┌─ testinput:1:23
  │  
1 │   entity main() -> bool {
  │                    ---- bool type specified here
  │ ╭───────────────────────^
2 │ │     reg(clk) a reset(true: 0) initial(true) initial(true) = true;
3 │ │     true
4 │ │ }
  │ ╰─^ Found type ()
  │  
  = note: Expected: bool
               Got: ()
